white space issue with mobile version

--- a/src/styles/modules/_footer.scss
+++ b/src/styles/modules/_footer.scss
@@ -7,6 +7,4 @@
   color: $white;
   font-family:$sub-heading;
   font-weight: 600;
-  background-color: $black;
-  box-shadow: inset 0px 0px 5px 0px rgba(17, 17, 17, 0.62);
 }
