--- a/src/styles/partials/_globals.scss
+++ b/src/styles/partials/_globals.scss
@@ -5,6 +5,7 @@ html,body {
   background-size: cover;
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   margin: 0px;
   padding: 0px;
   overflow-x: hidden;
