--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6,6 +6,7 @@ html, body {
   background-size: cover;
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   margin: 0px;
   padding: 0px;
   overflow-x: hidden;
@@ -144,25 +145,39 @@ table {
 
 .header .icon-container .icon {
   font-size: 1.75rem;
-  color: #eaeaea;
+  color: #c0c0c0;
 }
 
-.header .header-download {
+.header .header-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.header .header-links .link {
   text-decoration: none;
-  padding: 1% 2% 0% 0%;
   font-size: 1.25rem;
   color: #eaeaea;
   font-family: "Noto Sans", sans-serif;
   font-weight: 600;
-  border: 1px solid;
-  margin: 10px;
-  padding: 8px;
-  border-radius: 3px;
+  border: 1px solid #5a5a5a;
+  margin: 15px;
+  padding: 10px;
+  background-color: #5a5a5a;
+  -webkit-box-shadow: inset 0px 0px 5px 0px rgba(17, 17, 17, 0.62), 0px 0px 15px 0px #0000001a;
+          box-shadow: inset 0px 0px 5px 0px rgba(17, 17, 17, 0.62), 0px 0px 15px 0px #0000001a;
 }
 
-@media (max-width: 767px) {
-  .header .header-download {
-    font-size: 1rem;
+@media (max-width: 500px) {
+  .header .header-links .link {
+    font-size: 0.75rem;
   }
 }
 
@@ -1167,49 +1182,6 @@ table {
           justify-content: center;
 }
 
-.repo-links {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 1%;
-  width: 100%;
-  -webkit-box-shadow: inset 0px 0px 5px 0px rgba(17, 17, 17, 0.62);
-          box-shadow: inset 0px 0px 5px 0px rgba(17, 17, 17, 0.62);
-  background-color: #333333;
-}
-
-.repo-links a {
-  color: #eaeaea;
-  text-decoration: none;
-  font-family: "Alegreya Sans", sans-serif;
-  font-weight: 600;
-  font-size: 1.25rem;
-  padding: 6px 16px;
-  margin: 0% 1% 0% 1%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.repo-links span {
-  font-size: 2rem;
-  font-family: "Noto Sans", sans-serif;
-  color: #eaeaea;
-  font-weight: 600;
-}
-
 .footer {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1227,8 +1199,5 @@ table {
   color: #eaeaea;
   font-family: "Noto Sans", sans-serif;
   font-weight: 600;
-  background-color: #333333;
-  -webkit-box-shadow: inset 0px 0px 5px 0px rgba(17, 17, 17, 0.62);
-          box-shadow: inset 0px 0px 5px 0px rgba(17, 17, 17, 0.62);
 }
 /*# sourceMappingURL=styles.css.map */
